# llamavault

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  auto_doc_generator.py  cli.py  core.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  docker.yml
docs/: best_practices.rst  cli_usage.rst  index.rst  installation.rst  quickstart.rst  security.rst  web_interface.rst
docs-site/: index.html
docs-site/llamapackages/: index.html
docs-site/llamavault/: examples.html  getting_started.html  index.html
docs/api/: credential.rst  exceptions.rst  index.rst  vault.rst
docs/development/: architecture.rst  contributing.rst  plugins.rst
docs/examples/: advanced_usage.py  ai_integrations.py  basic_usage.py  ci_cd_integrations.py  docker_usage.py  index.rst  kubernetes_integration.py
examples/: basic_usage.py
src/llamavault/: __init__.py  cli.py  credential.py  exceptions.py  vault.py
src/llamavault/web/: __init__.py  app.py
src/llamavault/web/templates/: backup.html  base.html  credential_form.html  credentials.html  dashboard.html  error.html  export.html  login.html
tests/: test_cli.py  test_vault.py  test_web.py
web/: app.py
